--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--documento html5 definido com doctype-->
 <!DOCTYPE html>
 <!-- elemento root ou html em si -->
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <!-- link para as fontes -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,7 +26,13 @@
           src="./assets/avatar.png"
           alt="Foto de Adriano Rodrigues sorrindo com uma camisa de botão azul e fundo misto."
         />
-        <p>@tantofazdjow</p>
+        <p>Adriano Rodrigues</p>
+      </div>
+      <div id="switch">
+        <button>
+          
+        </button>
+        <span></span>
       </div>
       <!-- ul cria listas não ordenadas -->
       <ul>
@@ -47,6 +53,31 @@
 
         <li><a href="#">LINK</a></li>
       </ul>
+      <div id="social-links">
+        <a href="https://github.com/BugRed"  target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/tantofazdjow/" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://..." target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+        <a href="https://www.linkedin.com/in/adriano-rodrigues-da-silva-2a5708193/" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
     </div>
+    <footer>
+      Feito com ♥ pela <a href="https://..." target="_blank">Yahto Dev</a>
+    </footer>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
