rockseat perfil add

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>
 
         <li>
-          <a href="#">Download my ebook</a>
+          <a href="https://app.rocketseat.com.br/me/adriano-rodrigues-03434" target="_blank">Perfil Rocketseat</a>
         </li>
 
         <li>
