add new item list

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <li>
           <a href="https://github.com/BugRed" target="_blank">
-            meu portifólio</a
+            Portifólio</a
           >
         </li>
 
