--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8" />
     <!-- responsividade com devices scale = começa sem zoom -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DevProfile</title>
     <!-- referenciar onde está o css, para a propria pasta ./ -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -38,7 +38,7 @@
       <ul>
         <!-- li é item da lista -->
         <li>
-          <a href="#">Inscrever-se</a>
+          <a href="https://www.hackerrank.com/work_adrian_rod1" target="_blank">HackerRank</a>
         </li>
 
         <li>
