Maze Snake add to list

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           >
         </li>
 
-        <li><a href="#">LINK</a></li>
+        <li><a href="https://bugred.github.io/maze-snake-web/" target="_blank">Maze Snake <ion-icon name="game-controller-outline"></ion-icon></a></li>
       </ul>
       <div id="social-links">
         <a href="https://github.com/BugRed"  target="_blank">
