--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </a>
         <a href="https://..." target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a href="https://www.linkedin.com/in/adriano-rodrigues-da-silva-2a5708193/" target="_blank">
+        </a>https
+        <a href="www.linkedin.com/in/adriano-rodrigues-2a5708193" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
     </div>
