Adição de mais projetos

--- a/index.html
+++ b/index.html
@@ -46,12 +46,19 @@
         </li>
 
         <li>
-          <a href="https://github.com/BugRed" target="_blank">
-            Portifólio</a
+          <a href="https://bugred.github.io/js-game-ProjetoONE/" target="_blank">
+            Advinhe o número!</a
           >
         </li>
 
         <li><a href="https://bugred.github.io/maze-snake-web/" target="_blank">Maze Snake <ion-icon name="game-controller-outline"></ion-icon></a></li>
+        
+          <li>
+          <a href="https://spotify-clone-33x8.onrender.com/" target="_blank">
+             Spotify Clone</a
+          >
+        </li>
+        
       </ul>
       <div id="social-links">
         <a href="https://github.com/BugRed"  target="_blank">
@@ -60,17 +67,10 @@
         <a href="https://www.instagram.com/tantofazdjow/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://..." target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
         <a href="https://www.linkedin.com/in/adriano-rodrigues-ads/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
     </div>
-    <footer>
-      Feito com ♥ pela <a href="https://..." target="_blank">Yahto Dev</a>
-    </footer>
-
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
