--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
              Spotify Clone</a
           >
         </li>
+
+        <li>
+          <a href="https://bugred.github.io/react-todolist/" target="_blank">
+             ToDo List</a>
+        </li>
         
       </ul>
       <div id="social-links">
