--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
           <a href="https://bugred.github.io/react-todolist/" target="_blank">
              ToDo List</a>
         </li>
+
+                <li>
+          <a href="https://bugred.github.io/ignite-social-network/" target="_blank">
+             Ignite Social Network</a>
+        </li>
         
       </ul>
       <div id="social-links">
